# Wayland-Checker

./: Cargo.toml
src/: check_graphics_server.rs  main.rs
