[package]
name = "wayland-checker"
version = "0.0.1-Alpha"
edition = "2021"
authors = ["sakuraiyukina, sakuraiyukina0205@yahoo.co.jp"]
description = "A lite window protocol checker."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = "z"

[profile.release]
lto = "fat"
debug = false